--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,70 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  --color-primary-background: #342b19;
+  --color-primary-foreground: #ffffff;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-products-background: #dcf0ed;
+  --color-products-foreground: #000;
+
+  --color-bizlere-ulasin-background: #181610;
+  --color-bizlere-ulasin-foreground: #ffffff;
+
+  --color-footer-background: #342b19;
+  --color-footer-foreground: #ffffff;
+
+  --radius-rounded: 64px;
+  --font-family-serif: var(--font-roboto-serif);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--color-primary-background);
+  color: var(--color-primary-foreground);
+  font-family: var(--font-family-serif);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-roboto-serif);
+  line-height: 1.1;
+  letter-spacing: -0.03em;
+}
+
+p,
+span,
+a,
+li {
+  font-family: var(--font-roboto-serif);
+  line-height: 2rem;
+}
+
+@keyframes marquee-left {
+  to {
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+@keyframes marquee-right {
+  0% {
+    transform: translate3d(-50%, 0, 0);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.marquee-pause:hover {
+  animation-play-state: paused !important;
+}
+
+@layer utilities {
+  .marquee-smooth {
+    will-change: transform;
+    backface-visibility: hidden;
+    perspective: 1000px;
+  }
 }
