--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 @theme inline {
   --color-primary-background: #342b19;
@@ -67,4 +68,13 @@ li {
     backface-visibility: hidden;
     perspective: 1000px;
   }
+}
+
+/* Slider scrollbar gizleme */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
